crates/wolf_wir/tests/snapshots/lower_corpus__conc_select_two_timeouts.lu.snap
---
source: crates/wolf_wir/tests/lower_corpus.rs
expression: out
---
decl @__wolf_rt_chan_new(i64) -> ptr
decl @__wolf_rt_chan_send(ptr, i64) -> i32
decl @__wolf_rt_select(ptr, i64, i64, i8, ptr, ptr, mem.r0) -> i64
decl @__wolf_rt_task_killed() -> i8

fn @main() -> eu{i64} {
  fact deref %24 40 : op
  fact deref %66 40 : op
  fact region %24 r0 : op
  fact region %66 r1 : op
b0:
  %0 = iconst.i64 1
  %1 = call @__wolf_rt_chan_new(%0)
  %2 = call @__wolf_rt_chan_new(%0)
  %3 = iconst.i64 7
  %4 = call @__wolf_rt_chan_send(%1, %3)
  %5 = iconst.i32 0
  %6 = icmp.eq %4, %5
  br %6, b1, b2
b1:
  %7: eu{unit} = eu.make.ok
  jmp b7(%7)
b2:
  %8 = iconst.i32 1
  %9 = icmp.eq %4, %8
  br %9, b3, b4
b3:
  %10: eu{unit} = eu.make.err %0
  jmp b7(%10)
b4:
  %11 = call @__wolf_rt_task_killed()
  %12 = iconst.i8 0
  %13 = icmp.ne %11, %12
  br %13, b5, b6
b5:
  %14 = iconst.i64 2
  %15: eu{i64} = eu.make.err %14
  ret %15
b6:
  %16 = iconst.i64 2
  %17: eu{unit} = eu.make.err %16
  jmp b7(%17)
b7(%18: eu{unit}):
  %19: bool = eu.is_err %18
  br %19, b8, b9
b8:
  %20: i64 = eu.err %18
  %21: eu{i64} = eu.make.err %20
  ret %21
b9:
  %22 = iconst.i64 0
  %23 = iconst.i64 40
  %24: ptr, %25: mem.r0 = stack.alloc %23
  %26 = store.ptr %1, %24, %25
  %27 = iconst.i64 8
  %28 = ptr.off %24, %27, 1
  %29 = store.i64 %22, %28, %26
  %30 = iconst.i64 16
  %31 = ptr.off %24, %30, 1
  %32 = store.i64 %22, %31, %29
  %33 = iconst.i64 1000000000
  %34 = iconst.i8 0
  %35 = iconst.i64 24
  %36 = ptr.off %24, %35, 1
  %37 = iconst.i64 32
  %38 = ptr.off %24, %37, 1
  %39, %40 = call @__wolf_rt_select(%24, %0, %33, %34, %36, %38, %32)
  %41 = icmp.eq %39, %22
  br %41, b10, b11
b10:
  %42 = load.i64 %36, %40
  jmp b13(%42)
b11:
  %43 = iconst.i64 -2
  %44 = icmp.eq %39, %43
  br %44, b12, b34
b12:
  %45 = iconst.i64 -1
  jmp b13(%45)
b13(%46: i64):
  %47 = icmp.ne %46, %3
  br %47, b14, b15
b14:
  %48: eu{i64} = eu.make.ok %0
  ret %48
b15:
  %49 = iconst.i64 9
  %50 = call @__wolf_rt_chan_send(%2, %49)
  %51 = icmp.eq %50, %5
  br %51, b16, b17
b16:
  %52: eu{unit} = eu.make.ok
  jmp b22(%52)
b17:
  %53 = iconst.i32 1
  %54 = icmp.eq %50, %53
  br %54, b18, b19
b18:
  %55: eu{unit} = eu.make.err %0
  jmp b22(%55)
b19:
  %56 = call @__wolf_rt_task_killed()
  %57 = icmp.ne %56, %34
  br %57, b20, b21
b20:
  %58 = iconst.i64 2
  %59: eu{i64} = eu.make.err %58
  ret %59
b21:
  %60 = iconst.i64 2
  %61: eu{unit} = eu.make.err %60
  jmp b22(%61)
b22(%62: eu{unit}):
  %63: bool = eu.is_err %62
  br %63, b23, b24
b23:
  %64: i64 = eu.err %62
  %65: eu{i64} = eu.make.err %64
  ret %65
b24:
  %66: ptr, %67: mem.r1 = stack.alloc %23
  %68 = store.ptr %2, %66, %67
  %69 = ptr.off %66, %27, 1
  %70 = store.i64 %22, %69, %68
  %71 = ptr.off %66, %30, 1
  %72 = store.i64 %22, %71, %70
  %73 = ptr.off %66, %35, 1
  %74 = ptr.off %66, %37, 1
  %75, %76 = call @__wolf_rt_select(%66, %0, %33, %34, %73, %74, %72)
  %77 = icmp.eq %75, %22
  br %77, b25, b26
b25:
  %78 = load.i64 %73, %76
  jmp b28(%78)
b26:
  %79 = iconst.i64 -2
  %80 = icmp.eq %75, %79
  br %80, b27, b31
b27:
  %81 = iconst.i64 -1
  jmp b28(%81)
b28(%82: i64):
  %83 = icmp.ne %82, %49
  br %83, b29, b30
b29:
  %84 = iconst.i64 2
  %85: eu{i64} = eu.make.ok %84
  ret %85
b30:
  %86: eu{i64} = eu.make.ok %22
  ret %86
b31:
  %87 = call @__wolf_rt_task_killed()
  %88 = icmp.ne %87, %34
  br %88, b32, b33
b32:
  %89 = iconst.i64 2
  %90: eu{i64} = eu.make.err %89
  ret %90
b33:
  %91 = iconst.i64 2
  %92: eu{i64} = eu.make.err %91
  ret %92
b34:
  %93 = call @__wolf_rt_task_killed()
  %94 = icmp.ne %93, %34
  br %94, b35, b36
b35:
  %95 = iconst.i64 2
  %96: eu{i64} = eu.make.err %95
  ret %96
b36:
  %97 = iconst.i64 2
  %98: eu{i64} = eu.make.err %97
  ret %98
}
