crates/wolf_wir/tests/snapshots/lower_corpus__corpus_lowering_ledger.snap
---
source: crates/wolf_wir/tests/lower_corpus.rs
expression: "lines.join(\"\\n\")"
---
comptime/assert_static.lu: not mem-clean (pre-wir rungs own it)
comptime/budget_zero.lu: not mem-clean (pre-wir rungs own it)
comptime/depth_spiral.lu: not mem-clean (pre-wir rungs own it)
comptime/derive_eq.lu: refused — trait-impl method lowering (dispatch tables, c06); calls into unresolvable bodies
comptime/fold_reaches_lane.lu: lowers
comptime/fuel_loop.lu: not mem-clean (pre-wir rungs own it)
comptime/heap_flood.lu: not mem-clean (pre-wir rungs own it)
comptime/norm_linear.lu: refused — generic-function lowering (monomorphization); generic-function lowering (monomorphization); this type in WIR lowering
comptime/norm_witness.lu: not mem-clean (pre-wir rungs own it)
comptime/overflow_i32.lu: not mem-clean (pre-wir rungs own it)
comptime/reflect_fields.lu: refused — trait-impl method lowering (dispatch tables, c06)
comptime/runtime_arg.lu: not mem-clean (pre-wir rungs own it)
comptime/sandbox_clock.lu: not mem-clean (pre-wir rungs own it)
comptime/sandbox_env.lu: not mem-clean (pre-wir rungs own it)
comptime/sandbox_exec.lu: not mem-clean (pre-wir rungs own it)
comptime/sandbox_ffi.lu: not mem-clean (pre-wir rungs own it)
comptime/sandbox_fs.lu: not mem-clean (pre-wir rungs own it)
comptime/sandbox_io.lu: not mem-clean (pre-wir rungs own it)
comptime/sandbox_net.lu: not mem-clean (pre-wir rungs own it)
comptime/sandbox_net_socket.lu: not mem-clean (pre-wir rungs own it)
comptime/sandbox_random.lu: not mem-clean (pre-wir rungs own it)
comptime/size_of_layout.lu: not mem-clean (pre-wir rungs own it)
comptime.lu: lowers
conc/cancel_sibling.lu: lowers
conc/capture_mut_arg.lu: not mem-clean (pre-wir rungs own it)
conc/capture_mut_lend.lu: not mem-clean (pre-wir rungs own it)
conc/capture_write_assign.lu: not mem-clean (pre-wir rungs own it)
conc/chan_drain_after_inclusive_loop.lu: lowers
conc/chan_unsendable.lu: not mem-clean (pre-wir rungs own it)
conc/freeze_publish.lu: lowers
conc/message_passing.lu: lowers
conc/proc_cancel_defers.lu: lowers
conc/proc_kill_defers.lu: lowers
conc/proc_link.lu: lowers
conc/select_seeded.lu: lowers
conc/select_single_arm_loop.lu: lowers
conc/select_two_timeouts.lu: lowers
conc/store_buffer.lu: not mem-clean (pre-wir rungs own it)
conc/when_multi.lu: lowers
conc/when_nested.lu: not mem-clean (pre-wir rungs own it)
errors.lu: not mem-clean (pre-wir rungs own it)
faults/assert_fails.lu: lowers
faults/assert_msg_holds.lu: lowers
faults/bounds_slice.lu: lowers
faults/div_zero_rem.lu: lowers
faults/exclusivity_nested_path.lu: not mem-clean (pre-wir rungs own it)
faults/overflow_add.lu: lowers
faults/overflow_call_result.lu: lowers
faults/overflow_elem_read.lu: lowers
faults/overflow_elem_write.lu: lowers
faults/overflow_field_read.lu: lowers
faults/overflow_interp_operand.lu: lowers
faults/repeat_negative.lu: lowers
faults/use_after_move_field.lu: not mem-clean (pre-wir rungs own it)
ffi.lu: not mem-clean (pre-wir rungs own it)
fs/error_row.lu: lowers
fs/roundtrip.lu: lowers
grammar/bang_errunion.lu: lowers
grammar/bang_not.lu: lowers
grammar/brackets_generic_call.lu: not mem-clean (pre-wir rungs own it)
grammar/brackets_index.lu: not mem-clean (pre-wir rungs own it)
grammar/closure_extent.lu: not mem-clean (pre-wir rungs own it)
grammar/else_chain.lu: lowers
grammar/else_default.lu: not mem-clean (pre-wir rungs own it)
grammar/intdot_exponent.lu: not mem-clean (pre-wir rungs own it)
grammar/intdot_member.lu: not mem-clean (pre-wir rungs own it)
grammar/intdot_range.lu: lowers
grammar/interp_fmtcolon.lu: not mem-clean (pre-wir rungs own it)
grammar/interp_nested.lu: lowers
grammar/newline_leading.lu: not mem-clean (pre-wir rungs own it)
grammar/newline_trailing.lu: lowers
grammar/receiver_moded.lu: not mem-clean (pre-wir rungs own it)
grammar/semicolon.lu: not mem-clean (pre-wir rungs own it)
grammar/shebang.lu: lowers
grammar/structlit_cond.lu: not mem-clean (pre-wir rungs own it)
grammar/structlit_paren.lu: not mem-clean (pre-wir rungs own it)
grammar/when_reserved.lu: not mem-clean (pre-wir rungs own it)
hello.lu: lowers
io/eprint.lu: lowers
json/query.lu: refused — json builtins in native lowering (checked lane only at s40)
json/rows.lu: refused — json builtins in native lowering (checked lane only at s40)
kernels/churn_b3.lu: lowers
kernels/hot_counter.lu: lowers
kernels/hot_scale_versioned.lu: lowers
kernels/hot_sum_reduce.lu: lowers
lints/allow_item.lu: lowers
lints/allow_nothing.lu: lowers
lints/allow_unknown_code.lu: lowers
lints/ancestor_import/main.lu: lowers
lints/as_view_consuming.lu: lowers
lints/assume_reassigned.lu: refused — assume noalias (unsafe-tier WIR ops, deferred from s26 — see closeout)
lints/binder_capitalized.lu: lowers
lints/discarded_result.lu: lowers
lints/else_comparison.lu: lowers
lints/float_zero_minus.lu: lowers
lints/get_prefix.lu: lowers
lints/get_without_row.lu: lowers
lints/match_str_arm_unreachable.lu: lowers
lints/mut_in_interp.lu: lowers
lints/mut_param_unwritten.lu: lowers
lints/narrowing_literal.lu: lowers
lints/one_item_module/main.lu: lowers
lints/pkg_item_unused/main.lu: lowers
lints/predicate_shape.lu: lowers
lints/prefix_statement.lu: lowers
lints/pub_undocumented.lu: lowers
lints/raw_interp_braces.lu: lowers
lints/region_never_allocates.lu: lowers
lints/safety_comment_missing.lu: refused — index writes outside List (raw-pointer writes c10; Pool/Map c06/std)
lints/shadow_prelude.lu: lowers
lints/tag_case_payload.lu: lowers
lints/tag_name_collision.lu: lowers
lints/take_returned.lu: lowers
memory/borrow_escape.lu: not mem-clean (pre-wir rungs own it)
memory/checked_unsigned.lu: lowers
memory/defer_order.lu: lowers
memory/div_zero.lu: lowers
memory/excl_disjoint_ok.lu: lowers
memory/excl_overlap.lu: not mem-clean (pre-wir rungs own it)
memory/exclusivity.lu: lowers
memory/foreign_root_aliasing.lu: lowers
memory/handle_stale.lu: refused — Pool/shared constructor lowering (runtime shapes, c06)
memory/list_elem_assign.lu: lowers
memory/list_mutate_while_iter.lu: not mem-clean (pre-wir rungs own it)
memory/mode_missing_mut.lu: not mem-clean (pre-wir rungs own it)
memory/move_ok.lu: lowers
memory/move_use_after.lu: not mem-clean (pre-wir rungs own it)
memory/mut_arg_temporary.lu: not mem-clean (pre-wir rungs own it)
memory/mut_param_aggregate_store.lu: lowers
memory/mut_read_overlap.lu: not mem-clean (pre-wir rungs own it)
memory/oob_bounds.lu: lowers
memory/prov_holy_grail.lu: refused — this type in WIR lowering; closure lowering outside `spawn` (fn values, c05)
memory/prov_two_phase.lu: lowers
memory/read_param_write.lu: not mem-clean (pre-wir rungs own it)
memory/region_ambient_ok.lu: lowers
memory/region_conflict_params.lu: not mem-clean (pre-wir rungs own it)
memory/region_container_freeze_ok.lu: lowers
memory/region_container_reclaim.lu: lowers
memory/region_escape_container.lu: not mem-clean (pre-wir rungs own it)
memory/region_escape_local.lu: not mem-clean (pre-wir rungs own it)
memory/region_freeze_ok.lu: lowers
memory/region_freeze_open.lu: not mem-clean (pre-wir rungs own it)
memory/region_freeze_write.lu: not mem-clean (pre-wir rungs own it)
memory/region_infer_list_builder.lu: lowers
memory/region_infer_request_handler.lu: lowers
memory/region_infer_tree_transform.lu: lowers
memory/region_iso_edge_ok.lu: not mem-clean (pre-wir rungs own it)
memory/region_move_while_open.lu: not mem-clean (pre-wir rungs own it)
memory/region_multiopen_ok.lu: lowers
memory/region_multiopen_swap.lu: refused — Pool/shared constructor lowering (runtime shapes, c06)
memory/region_multiopen_values_ok.lu: lowers
memory/region_open_ancestor.lu: not mem-clean (pre-wir rungs own it)
memory/region_transfer_open.lu: not mem-clean (pre-wir rungs own it)
memory/shared_cycle.lu: not mem-clean (pre-wir rungs own it)
memory/shared_ok.lu: refused — shared-cell surface lowering (rc.* receivers, s27)
memory/unsafe_assume_malformed.lu: not mem-clean (pre-wir rungs own it)
memory/unsafe_c_alloc_native.lu: lowers
memory/unsafe_creation_not_use.lu: refused — index writes outside List (raw-pointer writes c10; Pool/Map c06/std)
memory/unsafe_door_borrow.lu: refused — first-class region values beyond local bindings (c05)
memory/unsafe_door_misuse.lu: not mem-clean (pre-wir rungs own it)
memory/unsafe_noalias.lu: refused — assume noalias (unsafe-tier WIR ops, deferred from s26 — see closeout)
memory/unsafe_raw_outside.lu: not mem-clean (pre-wir rungs own it)
memory/unsafe_sig.lu: not mem-clean (pre-wir rungs own it)
memory/unsafe_trusted.lu: refused — index writes outside List (raw-pointer writes c10; Pool/Map c06/std)
memory/unsafe_ub_uaf.lu: refused — index writes outside List (raw-pointer writes c10; Pool/Map c06/std)
memory/view_set_norm.lu: lowers
memory/view_set_violation.lu: not mem-clean (pre-wir rungs own it)
net/echo_roundtrip.lu: refused — net builtins in native lowering (checked lane only at s39)
net/refused_row.lu: refused — net builtins in native lowering (checked lane only at s39)
os/args_cwd.lu: lowers
os/env_roundtrip.lu: lowers
os/exit_code.lu: lowers
os/spawn_rows.lu: refused — process builtins in native lowering (checked lane only at s40)
overflow.lu: lowers
procs.lu: lowers
projects/count.lu: lowers
projects/rpn.lu: lowers
projects/wordtree.lu: lowers
regions.lu: refused — Pool/shared constructor lowering (runtime shapes, c06)
resolve/cycle/main.lu: not mem-clean (pre-wir rungs own it)
resolve/dupdef/main.lu: not mem-clean (pre-wir rungs own it)
resolve/forward/main.lu: lowers
resolve/pkgvis/main.lu: lowers
resolve/private/main.lu: not mem-clean (pre-wir rungs own it)
resolve/same_name/main.lu: lowers
resolve/two_mod/main.lu: lowers
resolve/unused/main.lu: not mem-clean (pre-wir rungs own it)
rows/coarsen.lu: refused — trait-impl method lowering (dispatch tables, c06); calls into unresolvable bodies
rows/else_tag_payload.lu: lowers
rows/eu_main_err_exit.lu: lowers
rows/handler_match_tags.lu: lowers
rows/hof_tail.lu: refused — generic-function lowering (monomorphization); generic-function calls (monomorphization)
rows/inferred_private.lu: refused — module-item reads (globals, c06)
rows/negative/dup_tags.lu: not mem-clean (pre-wir rungs own it)
rows/negative/errdefer_infallible.lu: not mem-clean (pre-wir rungs own it)
rows/negative/handler_uncovered.lu: not mem-clean (pre-wir rungs own it)
rows/negative/missing_tag.lu: not mem-clean (pre-wir rungs own it)
rows/negative/open_into_closed.lu: not mem-clean (pre-wir rungs own it)
rows/negative/payload_mismatch.lu: not mem-clean (pre-wir rungs own it)
rows/negative/pub_inferred.lu: not mem-clean (pre-wir rungs own it)
rows/open_row_growth.lu: lowers
rows/propagate/main.lu: lowers
rows/qmark_defer.lu: lowers
strings/builtin_methods.lu: lowers
strings/byte_view.lu: lowers
strings/char_index_fail.lu: not mem-clean (pre-wir rungs own it)
strings/empty_needle.lu: lowers
strings/equality_lanes.lu: lowers
strings/float_format.lu: lowers
strings/format_spec_full.lu: lowers
strings/format_spec_malformed.lu: not mem-clean (pre-wir rungs own it)
strings/format_spec_mismatch.lu: not mem-clean (pre-wir rungs own it)
strings/format_spec_width.lu: lowers
strings/from_utf8_border.lu: lowers
strings/interp_value_position.lu: lowers
strings/match_str_dispatch.lu: lowers
strings/slice_boundary_sweep.lu: lowers
strings/slice_oob_trap.lu: lowers
strings/split_clause.lu: lowers
strings.lu: not mem-clean (pre-wir rungs own it)
test/assert_test.lu: lowers
test/conc_schedules_test.lu: lowers
time/monotonic.lu: lowers
traits/adapter_distinct/main.lu: refused — trait-impl method lowering (dispatch tables, c06); generic-function lowering (monomorphization); generic-function calls (monomorphization)
traits/assoc_rewrite.lu: refused — trait-impl method lowering (dispatch tables, c06); generic-function lowering (monomorphization); generic-function calls (monomorphization)
traits/call_unmet_bound.lu: not mem-clean (pre-wir rungs own it)
traits/coherence_orphan/main.lu: not mem-clean (pre-wir rungs own it)
traits/coherence_overlap.lu: not mem-clean (pre-wir rungs own it)
traits/coherence_uncovered.lu: not mem-clean (pre-wir rungs own it)
traits/dyn_assoc_escape.lu: not mem-clean (pre-wir rungs own it)
traits/dyn_generic_method.lu: not mem-clean (pre-wir rungs own it)
traits/dyn_ok.lu: refused — trait-impl method lowering (dispatch tables, c06); this type in WIR lowering
traits/dyn_self_position.lu: not mem-clean (pre-wir rungs own it)
traits/golden_arith.lu: not mem-clean (pre-wir rungs own it)
traits/golden_eq.lu: not mem-clean (pre-wir rungs own it)
traits/golden_missing_bound.lu: not mem-clean (pre-wir rungs own it)
traits/show_bound.lu: refused — trait-impl method lowering (dispatch tables, c06); generic-function lowering (monomorphization); generic-function calls (monomorphization)
typecheck/ambiguous.lu: not mem-clean (pre-wir rungs own it)
typecheck/arg_count.lu: not mem-clean (pre-wir rungs own it)
typecheck/arg_vs_return.lu: not mem-clean (pre-wir rungs own it)
typecheck/cast_bad.lu: not mem-clean (pre-wir rungs own it)
typecheck/cast_set.lu: lowers
typecheck/coerce_no_widening.lu: not mem-clean (pre-wir rungs own it)
typecheck/field_typo.lu: not mem-clean (pre-wir rungs own it)
typecheck/float_nan_cmp.lu: lowers
typecheck/if_branch.lu: not mem-clean (pre-wir rungs own it)
typecheck/let_compound_assign.lu: not mem-clean (pre-wir rungs own it)
typecheck/let_reassign.lu: not mem-clean (pre-wir rungs own it)
typecheck/let_shadow_var_ok.lu: lowers
typecheck/match_exhaustive.lu: lowers
typecheck/match_missing.lu: not mem-clean (pre-wir rungs own it)
typecheck/match_narrow_scrutinee.lu: lowers
typecheck/match_str_nonexhaustive.lu: not mem-clean (pre-wir rungs own it)
typecheck/match_unreachable.lu: lowers
typecheck/method_ambiguous.lu: not mem-clean (pre-wir rungs own it)
typecheck/method_inherent.lu: refused — trait-impl method lowering (dispatch tables, c06); calls into unresolvable bodies
typecheck/method_scope/main.lu: not mem-clean (pre-wir rungs own it)
typecheck/pattern_shape.lu: not mem-clean (pre-wir rungs own it)
typecheck/receiver_bare_mut.lu: not mem-clean (pre-wir rungs own it)
typecheck/receiver_modes.lu: lowers
typecheck/refutable_let.lu: not mem-clean (pre-wir rungs own it)
typecheck/trait_default.lu: refused — trait default-body lowering (dispatch tables, c06); trait-impl method lowering (dispatch tables, c06); trait-method call lowering (dispatch tables, c06)
wordcount.lu: not mem-clean (pre-wir rungs own it)
