crates/wolf_wir/tests/snapshots/lower_corpus__faults_div_zero_rem.lu.snap
---
source: crates/wolf_wir/tests/lower_corpus.rs
expression: out
---
fn @main() -> i64 {
b0:
  %0 = iconst.i64 0
  %1 = iconst.i64 10
  trap
}
