crates/wolf_wir/tests/snapshots/lower_corpus__faults_overflow_add.lu.snap
---
source: crates/wolf_wir/tests/lower_corpus.rs
expression: out
---
fn @main() -> i64 {
b0:
  %0 = iconst.i32 2147483647
  %1 = iconst.i32 1
  %2 = iconst.i32 -2147483648
  trap
}
