crates/wolf_wir/tests/snapshots/lower_corpus__grammar_intdot_range.lu.snap
---
source: crates/wolf_wir/tests/lower_corpus.rs
assertion_line: 125
expression: out
---
fn @main() -> i64 {
b0:
  %0 = iconst.i32 0
  %1 = iconst.i32 1
  %2 = iconst.i32 10
  jmp b1(%1, %0)
b1(%3: i32, %4: i32):
  %5 = icmp.slt %3, %2
  br %5, b2, b4
b2:
  %6 = iadd.chk %4, %3
  jmp b3
b3:
  %7 = iadd.chk %3, %1
  jmp b1(%7, %6)
b4:
  jmp b5(%1, %4)
b5(%8: i32, %9: i32):
  %10 = iadd.chk %9, %8
  jmp b6
b6:
  %11 = icmp.eq %8, %2
  br %11, b7, b11
b7:
  %12 = iconst.i32 100
  %13 = icmp.eq %10, %12
  br %13, b8, b9
b8:
  %14 = iconst.i64 0
  jmp b10(%14)
b9:
  %15 = iconst.i64 1
  jmp b10(%15)
b10(%16: i64):
  ret %16
b11:
  %17 = iadd.chk %8, %1
  jmp b5(%17, %10)
}
